# gfs-utils-AI

parm/ocnicepost/: ice.csv  ice_mx025_to_0p25.nml  ocean.csv  ocean_mx025_to_0p25.nml  ocnicepost.nml.jinja2
src/ocnicepost.fd/: CMakeLists.txt  init_mod.F90  masking_mod.F90  ocnicepost.F90  utils_mod.F90
